use java 17 instead of java 21 for more version support